Tue Jun 23 21:28:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_get_path_check): check with given safe level.

	* file.c (rb_find_file_ext_safe, rb_find_file_safe): ditto.

	* safe.c (rb_insecure_operation): function to raise security
	  error.

Tue Jun 23 20:32:43 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c: remove the definition of GC_DEBUG (debugging macro).

Tue Jun 23 16:16:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ruby_version): defaults revision to 0 when no
	  revision.h exists.

Tue Jun 23 16:04:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_find_file_ext, rb_find_file): no needs to expand
	  paths with tilde twice.

	* load.c (rb_f_load): load the given path directly if not found in
	  load_path.

	* load.c (search_required): search file in specified safe level.

	* load.c (rb_require_safe): path to load is already searched in
	  search_required().

Tue Jun 23 12:43:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: remove PACKAGE_* macros generated by autotools.
	  [ruby-core:20938]

Tue Jun 23 01:17:38 2009  Tanaka Akira  <akr@fsij.org>

	* ruby.c (process_options): don't specify .so for encdb here.
	  "." is replaced by "_" in load_encoding.

	* encoding.c (load_encoding): add .so here. 

Mon Jun 22 23:24:22 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_generic_ivar_memsize): typo fixed.  a patch from
	  Kazuhiro NISHIYAMA.  [ruby-dev:38700]

	* ext/objspace/objspace.c (memsize_of): ditto.

Mon Jun 22 21:21:59 2009  Tanaka Akira  <akr@fsij.org>

	* io.c: remove __CHECKER__ test.

	* dir.c: ditto.

	* dln.c: ditto.

	* file.c: ditto.

	* process.c: ditto.

Mon Jun 22 17:15:38 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each_codepoint): new method.
	  [ruby-core:23949]

	* ext/stringio/stringio.c (strio_each_codepoint): ditto.

Mon Jun 22 16:26:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
